--- a/templates/modules/transaction/transaction_season.html
+++ b/templates/modules/transaction/transaction_season.html
@@ -6,7 +6,7 @@
 <br>
 <form action="{% url 'transaction:season' %}" method="POST" class="ui form">{% csrf_token %}
     <div class="three fields">
-        <div class="three wide field">
+        {% comment %} <div class="three wide field">
             <select class="ui dropdown" name="year">
                 <option value="">請選擇年份</option>
                 <option value="2016">2016</option>
@@ -22,14 +22,15 @@
                 <option value="秋季">秋季</option>
                 <option value="冬季">冬季</option>
             </select>  
-            {% comment %} <input type="button" name="season" class="ui button" value="春季">  
-            <input type="button" name="season" class="ui button" value="夏季">    
-            <input type="button" name="season" class="ui button" value="秋季">    
-            <input type="button" name="season" class="ui button" value="冬季"> {% endcomment %}
-        </div>
-        <div class="field">    
+        </div> {% endcomment %}
+            <button type="submit" name="season" class="ui button" value="春季">春季</button>  
+            <button type="submit" name="season" class="ui button" value="夏季">夏季</button>
+            <button type="submit" name="season" class="ui button" value="秋季">秋季</button>    
+            <button type="submit" name="season" class="ui button" value="冬季">冬季</button>
+        
+        {% comment %} <div class="field">    
             <button type="submit" class="ui button">提交</button>
-        </div>
+        </div> {% endcomment %}
     </div>
 </form>
 <h3>{{ req_year }} {{ req_season }}</h3>
