--- a/templates/modules/member/piechart.html
+++ b/templates/modules/member/piechart.html
@@ -7,6 +7,7 @@
 <script>
     Highcharts.chart('container', {
         chart: {
+            backgroundColor: '#f4f7f6',
             plotBackgroundColor: null,
             plotBorderWidth: null,
             plotShadow: false,
@@ -49,6 +50,7 @@
     <script>
         Highcharts.chart('container1', {
             chart: {
+                backgroundColor: '#f4f7f6',
                 plotBackgroundColor: null,
                 plotBorderWidth: null,
                 plotShadow: false,
@@ -99,6 +101,7 @@
     <script>
         Highcharts.chart('container2', {
             chart: {
+                backgroundColor: '#f4f7f6',
                 plotBackgroundColor: null,
                 plotBorderWidth: null,
                 plotShadow: false,
