--- a/templates/modules/transaction/transaction_season.html
+++ b/templates/modules/transaction/transaction_season.html
@@ -2,10 +2,10 @@
 
 {% block main %}
 <h2>季節銷售狀況</h2>
-<hr>
+
 <br>
 <form action="{% url 'transaction:season' %}" method="POST" class="ui form">{% csrf_token %}
-    <div class="three fields">
+    <div class="fields">
         {% comment %} <div class="three wide field">
             <select class="ui dropdown" name="year">
                 <option value="">請選擇年份</option>
@@ -23,11 +23,18 @@
                 <option value="冬季">冬季</option>
             </select>  
         </div> {% endcomment %}
-            <button type="submit" name="season" class="ui button" value="春季">春季</button>  
-            <button type="submit" name="season" class="ui button" value="夏季">夏季</button>
-            <button type="submit" name="season" class="ui button" value="秋季">秋季</button>    
-            <button type="submit" name="season" class="ui button" value="冬季">冬季</button>
-        
+        <div class="field">
+            <button type="submit" name="season" class="ui button" value="春季">春季</button>
+        </div>
+        <div class="field"> 
+            <button type="submit" name="season" class="ui button" value="夏季">夏季</button> 
+        </div>
+        <div class="field">
+            <button type="submit" name="season" class="ui button" value="秋季">秋季</button>
+        </div>
+        <div class="field">
+            <button type="submit" name="season" class="ui button" value="冬季">冬季</button> 
+        </div>
         {% comment %} <div class="field">    
             <button type="submit" class="ui button">提交</button>
         </div> {% endcomment %}
