--- a/templates/modules/inventory/inventory.html
+++ b/templates/modules/inventory/inventory.html
@@ -3,7 +3,7 @@
 {% block main %}
 <h2>存貨狀況</h2>
 
-<div class="ui segment">
+<div class="ui padded segment">
     <div class="ui three column grid">
         <div class="column">
             <h3 class="ui dividing header">Products</h3>
