--- a/templates/modules/member/piechart.html
+++ b/templates/modules/member/piechart.html
@@ -7,7 +7,7 @@
 <script>
     Highcharts.chart('container', {
         chart: {
-            backgroundColor: '#f4f7f6',
+            backgroundColor: 'rgba(0, 0, 0, 0)',
             plotBackgroundColor: null,
             plotBorderWidth: null,
             plotShadow: false,
@@ -50,7 +50,7 @@
     <script>
         Highcharts.chart('container1', {
             chart: {
-                backgroundColor: '#f4f7f6',
+                backgroundColor: 'rgba(0, 0, 0, 0)',
                 plotBackgroundColor: null,
                 plotBorderWidth: null,
                 plotShadow: false,
@@ -101,7 +101,7 @@
     <script>
         Highcharts.chart('container2', {
             chart: {
-                backgroundColor: '#f4f7f6',
+                backgroundColor: 'rgba(0, 0, 0, 0)',
                 plotBackgroundColor: null,
                 plotBorderWidth: null,
                 plotShadow: false,
