--- a/templates/modules/transaction/transaction_month.html
+++ b/templates/modules/transaction/transaction_month.html
@@ -1,47 +1,51 @@
 {% extends 'base/layout.html' %}
 
 {% block main %}
-<h2>季節銷售狀況</h2>
+<h2>歷年月銷售狀況</h2>
 
 <br>
-<form action="{% url 'transaction:season' %}" method="POST" class="ui form">{% csrf_token %}
+<form action="{% url 'transaction:month' %}" method="POST" class="ui form">{% csrf_token %}
     <div class="fields">
-        {% comment %} <div class="three wide field">
-            <select class="ui dropdown" name="year">
-                <option value="">請選擇年份</option>
-                <option value="2016">2016</option>
-                <option value="2017">2017</option>
-                <option value="2018">2018</option>
-            </select>
-        </div>
-        <div class="two wide field">  
-            <select class="ui dropdown" name="season">
-                <option value="">請選擇季節</option>
-                <option value="春季">春季</option>
-                <option value="夏季">夏季</option>
-                <option value="秋季">秋季</option>
-                <option value="冬季">冬季</option>
-            </select>  
-        </div> {% endcomment %}
         <div class="field">
-            <button type="submit" name="season" class="ui green button" value="春季">春季</button>
+            <button type="submit" name="month" class="ui circular button" value="1">1月</button>
         </div>
         <div class="field"> 
-            <button type="submit" name="season" class="ui red button" value="夏季">夏季</button> 
+            <button type="submit" name="month" class="ui circular button" value="2">2月</button> 
         </div>
         <div class="field">
-            <button type="submit" name="season" class="ui orange button" value="秋季">秋季</button>
+            <button type="submit" name="month" class="ui circular button" value="3">3月</button>
         </div>
         <div class="field">
-            <button type="submit" name="season" class="ui blue button" value="冬季">冬季</button> 
+            <button type="submit" name="month" class="ui circular button" value="4">4月</button> 
         </div>
-        {% comment %} <div class="field">    
-            <button type="submit" class="ui button">提交</button>
-        </div> {% endcomment %}
+        <div class="field">
+            <button type="submit" name="month" class="ui circular button" value="5">5月</button> 
+        </div>
+        <div class="field">
+            <button type="submit" name="month" class="ui circular button" value="6">6月</button> 
+        </div>
+        <div class="field">
+            <button type="submit" name="month" class="ui circular button" value="7">7月</button> 
+        </div>
+        <div class="field">
+            <button type="submit" name="month" class="ui circular button" value="8">8月</button> 
+        </div>
+        <div class="field">
+            <button type="submit" name="month" class="ui circular button" value="9">9月</button> 
+        </div>
+        <div class="field">
+            <button type="submit" name="month" class="ui circular button" value="10">10月</button> 
+        </div>
+        <div class="field">
+            <button type="submit" name="month" class="ui circular button" value="11">11月</button> 
+        </div>
+        <div class="field">
+            <button type="submit" name="month" class="ui circular button" value="12">12月</button> 
+        </div>
     </div>
 </form>
-{% if req_season %}
-<h3>{{ req_season }}</h3>
+{% if req_month %}
+<h3>{{ req_month }}月</h3>
 <table class="ui sortable celled table">
     <thead>
         <tr>
