--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -1,46 +1,37 @@
-<div id="top">
+{% comment %} <div id="top">
     <h1 id="h1-top"><a class="header item" href="{% url 'homepage' %}" style="color: black;">雨傘王</a></h1>
+</div> {% endcomment %}
+
+<div class="ui borderless main menu">
+    <div class="ui container">
+        <a class="header item" href="{% url 'homepage' %}">
+            <img id="nav-img" src="https://jiuanimation.com/works/1203-umbrella-king-logo.jpg">
+        </a>        
+        <div class="ui simple dropdown item">
+            存貨管理 <i class="dropdown icon"></i>
+            <div class="menu">
+                <a class="item" href="{% url 'inventory:list' %}">存貨狀況</a>
+            </div>
+        </div>
+        <div class="ui simple dropdown item">
+            銷售狀況 <i class="dropdown icon"></i>
+            <div class="menu">
+                <a class="item" href="{% url 'transaction:year' %}">歷年年銷售狀況</a>
+                <a class="item" href="{% url 'transaction:season' %}">歷年季銷售狀況</a>
+                <a class="item" href="{% url 'transaction:month' %}">歷年月銷售狀況</a>
+                <a class="item" href="{% url 'transaction:chart' %}">月銷售圖表分析</a>
+            </div>
+        </div>
+        <a class="item" href="{% url 'inventory:schedule_form' %}">生產排程</a>
+        <a class="item" href="{% url 'activity:detail' %}">行銷活動</a>
+        <a class="item" href="{% url 'member:search' %}">會員查詢</a>
+        <a class="item" href="{% url 'member:piechart' %}">會員分布圖</a>
+            {% comment %} </div> {% endcomment %}
+    </div>
 </div>
 
-<div class="ui relaxed grid" style="background-color:white;">
-    <div class="two wide column"></div>
-    <div class="twelve column centered grid">
-        <div class="ui text menu c-font">
-            {% comment %} <div class="ui container"> {% endcomment %}
-                {% comment %} <a class="header item" href="{% url 'homepage' %}">
-                    <img id="nav-img" src="https://jiuanimation.com/works/1203-umbrella-king-logo.jpg">
-                </a> {% endcomment %}
-                <div class="three wide column">
-                    <div class="ui simple dropdown item">
-                        存貨管理 <i class="dropdown icon"></i>
-                        <div class="menu">
-                            <a class="item" href="{% url 'inventory:list' %}">存貨狀況</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="column">
-                <div class="ui simple dropdown item">
-                    銷售狀況 <i class="dropdown icon"></i>
-                    <div class="menu">
-                        <a class="item" href="{% url 'transaction:year' %}">歷年年銷售狀況</a>
-                        <a class="item" href="{% url 'transaction:season' %}">歷年季銷售狀況</a>
-                        <a class="item" href="{% url 'transaction:month' %}">歷年月銷售狀況</a>
-                        <a class="item" href="{% url 'transaction:chart' %}">月銷售圖表分析</a>
-                    </div>
-                </div>
-                </div>
-                <a class="item" href="{% url 'inventory:schedule_form' %}">生產排程</a>
-                <a class="item" href="{% url 'activity:detail' %}">行銷活動</a>
-                <a class="item" href="{% url 'member:search' %}">會員查詢</a>
-                <a class="item" href="{% url 'member:piechart' %}">會員分布圖</a>
-            {% comment %} </div> {% endcomment %}
-        </div>
-    </div>
-    <div class="two wide column"></div>
-</div>
-<hr>
 <br>
-<script type="text/javascript">
+{% comment %} <script type="text/javascript">
     $(document).ready(function() {
         $('.ui.menu').menu();
     });
@@ -48,8 +39,8 @@
         $('.ui .item').removeClass('active');
         $(this).addClass('active');
     }); 
-</script>
+</script> {% endcomment %}
 {% load static %}
 <script src="{% static 'js/dropdown.js' %}"></script>
-<script src="{% static 'js/tab.js' %}"></script>
+{% comment %} <script src="{% static 'js/tab.js' %}"></script> {% endcomment %}
 
