--- a/templates/modules/inventory/schedule_form.html
+++ b/templates/modules/inventory/schedule_form.html
@@ -15,6 +15,12 @@
                 <option value="抗UV直傘">抗UV直傘</option>
                 <option value="防風直傘">防風直傘</option>
                 <option value="輕量直傘">輕量直傘</option>
+                <option value="抗UV自動摺傘">抗UV自動摺傘</option>
+                <option value="防風自動摺傘">防風自動摺傘</option>
+                <option value="輕量自動摺傘">輕量自動摺傘</option>
+                <option value="抗UV手開摺傘">抗UV手開摺傘</option>
+                <option value="防風手開摺傘">防風手開摺傘</option>
+                <option value="輕量手開摺傘">輕量手開摺傘</option>
             </select>
         </div>
         <div class="two wide field">
