--- a/templates/modules/member/membersearch.html
+++ b/templates/modules/member/membersearch.html
@@ -44,7 +44,7 @@
 </form>
 <br><br>
 {% if members %}
-    <p>{{ target_age }} {{ target_gender }} {{ target_dwelling }}</p>
+    <p>目標客群: {{ target_age }} {{ target_gender }} {{ target_dwelling }}</p>
     <table class="ui table">
     <thead>
         <tr>
