--- a/templates/modules/inventory/schedule_form.html
+++ b/templates/modules/inventory/schedule_form.html
@@ -36,7 +36,7 @@
 <br>
 {% if component_tree_list %}
     <p id="top">{{ date }} {{ get_um }} {{ num }}支,&nbsp&nbsp目前存貨量: {{ umbrella.inventory }}支,&nbsp&nbsp
-    不足{{ lack }}支&nbsp&nbsp<button class="ui teal button" onclick="displayTree()">檢視產品結構樹</button></p>
+    {% if lack > 0 %}不足{{ lack }}支{% else %}存貨充足{% endif %}&nbsp&nbsp<button class="ui teal button" onclick="displayTree()">檢視產品結構樹</button></p>
     <br>
     <div style="display:none" class="tree" id="tree">
         <ul>
@@ -55,6 +55,7 @@
         </ul>
     </div>
     
+    {% if lack > 0 %}
     <div style="clear: left; padding-top:20px;">
         <h3>零件:</h3>
         <table class="ui teal table">
@@ -64,6 +65,7 @@
                     <th>需求量</th>
                     <th>目前存貨量</th>
                     <th>存貨狀況</th>
+                    <th>前置時間</th>
                     <th>生產建議</th>
                     <th>最佳生產批量</th>
                 </tr>
@@ -76,10 +78,12 @@
                     <td>{{ item.0.inventory }}單位</td>
                     {% if item.2 > 0 %}
                     <td class="negative">不足{{ item.2 }}單位</td>
+                    <td>{{ item.0.component_detail.lead_time }}天</td>
                     <td>應於{{ item.3 }}生產</td>
                     <td>{{ item.0.component_detail.epq }}</td>
                     {% else %}
                     <td class="positive">存貨充足</td>
+                    <td>{{ item.0.component_detail.lead_time }}天</td>
                     <td>暫不需生產</td>
                     <td></td>
                     {% endif %} 
@@ -163,7 +167,11 @@
             </tbody>
         </table>    
     </div>
+    {% endif %}
+{% else %}
+<p>{{ err_message }}</p>
 {% endif %}
+
 
 {% load static %}
 <script src="{% static 'js/dropdown.js' %}"></script>
