--- a/templates/modules/transaction/transaction_year.html
+++ b/templates/modules/transaction/transaction_year.html
@@ -2,52 +2,15 @@
 
 {% block main %}
 <h2>歷年年銷售狀況</h2>
-
+ 
 <br>
-<form action="{% url 'transaction:season' %}" method="POST" class="ui form">{% csrf_token %}
-    <div class="fields">
-        {% comment %} <div class="three wide field">
-            <select class="ui dropdown" name="year">
-                <option value="">請選擇年份</option>
-                <option value="2016">2016</option>
-                <option value="2017">2017</option>
-                <option value="2018">2018</option>
-            </select>
-        </div>
-        <div class="two wide field">  
-            <select class="ui dropdown" name="season">
-                <option value="">請選擇季節</option>
-                <option value="春季">春季</option>
-                <option value="夏季">夏季</option>
-                <option value="秋季">秋季</option>
-                <option value="冬季">冬季</option>
-            </select>  
-        </div> {% endcomment %}
-        {% comment %} <div class="field">
-            <button type="submit" name="season" class="ui green button" value="春季">春季</button>
-        </div>
-        <div class="field"> 
-            <button type="submit" name="season" class="ui red button" value="夏季">夏季</button> 
-        </div>
-        <div class="field">
-            <button type="submit" name="season" class="ui orange button" value="秋季">秋季</button>
-        </div>
-        <div class="field">
-            <button type="submit" name="season" class="ui blue button" value="冬季">冬季</button> 
-        </div> {% endcomment %}
-        {% comment %} <div class="field">    
-            <button type="submit" class="ui button">提交</button>
-        </div> {% endcomment %}
-    </div>
-</form>
-{% comment %} {% if req_season %}
-<h3>{{ req_season }}</h3> {% endcomment %}
+{% comment %}
 <table class="ui sortable celled table">
     <thead>
         <tr>
             <th>產品名稱</th>
-            <th class="sorted descending">2016</th>
-            <th class="sorted descending">2017</th>
+            <th>2016</th>
+            <th>2017</th>
             <th class="sorted descending">2018</th>
         </tr>
     </thead>
@@ -61,64 +24,86 @@
         </tr>
     {% endfor %}
     </tbody>
-</table>
-
-{% comment %} <table class="ui sortable celled table">
-    <thead>
-        <tr>
-            <th>產品名稱</th>
-            <th class="sorted ascending">銷售數量</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>抗UV直傘</td>
-            <td>{{ uv_s_sold }}</td>
-        </tr>
-        <tr>
-            <td>抗UV自動摺傘</td>
-            <td>{{ uv_auto_sold }}</td>
-        </tr>
-        <tr>
-            <td>抗UV手開摺傘</td>
-            <td>{{ uv_manual_sold }}</td>
-        </tr>
-        <tr>
-            <td>防風直傘</td>
-            <td>{{ wind_s_sold }}</td>
-        </tr>
-        <tr>
-            <td>防風自動摺傘</td>
-            <td>{{ wind_auto_sold }}</td>
-        </tr>
-        <tr>
-            <td>防風手開摺傘</td>
-            <td>{{ wind_manual_sold }}</td>
-        </tr>
-        <tr>
-            <td>輕量直傘</td>
-            <td>{{ l_s_sold }}</td>
-        </tr>
-        <tr>
-            <td>輕量自動摺傘</td>
-            <td>{{ l_auto_sold }}</td>
-        </tr>
-        <tr>
-            <td>輕量手開摺傘</td>
-            <td>{{ l_manual_sold }}</td>
-        </tr>
-    </tbody>
 </table> {% endcomment %}
-
-{% comment %} <p>{{ uv_s_sold }}</p>
-<p>{{ uv_auto_sold }}</p>
-<p>{{ uv_manual_sold }}</p>
-<p>{{ wind_s_sold }}</p>
-<p>{{ wind_auto_sold }}</p>
-<p>{{ wind_manual_sold }}</p>
-<p>{{ l_s_sold }}</p>
-<p>{{ l_auto_sold }}</p>
-<p>{{ l_manual_sold }}</p> {% endcomment %}
+<div id="container"></div>
+<script src="https://code.highcharts.com/highcharts.src.js"></script>
+<script>
+    Highcharts.chart('container', {
+        chart: {
+            type: 'line',
+            backgroundColor: 'rgba(0, 0, 0, 0)',
+        },
+        title: {
+            text: '歷年年銷售狀況'
+        },
+        subtitle: {
+            text: ''
+        },
+        {% comment %} xAxis: {
+        categories: ['2016', '2017', '2018']
+        }, {% endcomment %}
+        yAxis: {
+            title: {
+                text: '銷售量'
+            }
+        },
+        legend: {
+            layout: 'vertical',
+            align: 'right',
+            verticalAlign: 'middle'
+        },
+        plotOptions: {
+            series: {
+                label: {
+                    connectorAllowed: false
+                },
+                pointStart: 2016
+            }
+        },
+        series: [{
+            name: '抗UV直傘',
+            data: {{ product_dict.抗UV直傘 }}
+        }, {
+            name: '抗UV自動摺傘',
+            data: {{ product_dict.抗UV自動摺傘 }}
+        }, {
+            name: '抗UV手開摺傘',
+            data: {{ product_dict.抗UV手開摺傘 }}
+        }, {
+            name: '防風直傘',
+            data: {{ product_dict.防風直傘 }}
+        }, {
+            name: '防風自動摺傘',
+            data: {{ product_dict.防風自動摺傘 }}
+        }, {
+            name: '防風手開摺傘',
+            data: {{ product_dict.防風手開摺傘 }}
+        }, {
+            name: '輕量直傘',
+            data: {{ product_dict.輕量直傘 }}
+        }, {
+            name: '輕量自動摺傘',
+            data: {{ product_dict.輕量自動摺傘 }}
+        }, {
+            name: '輕量手開摺傘',
+            data: {{ product_dict.輕量手開摺傘 }}
+        },],
+        responsive: {
+            rules: [{
+                condition: {
+                    maxWidth: 500
+                },
+                chartOptions: {
+                    legend: {
+                        layout: 'horizontal',
+                        align: 'center',
+                        verticalAlign: 'bottom'
+                    }
+                }
+            }]
+        }
+    });
+</script>
 
 {% load static %}
 <script src="{% static 'js/dropdown.js' %}"></script>
