--- a/templates/modules/transaction/transaction_season.html
+++ b/templates/modules/transaction/transaction_season.html
@@ -79,6 +79,13 @@
         subtitle: {
             text: ''
         },
+        xAxis: {
+            categories: [
+                '2016',
+                '2017',
+                '2018',
+            ],
+        },
         yAxis: {
             title: {
                 text: '銷售量'
