--- a/templates/modules/inventory/schedule_form.html
+++ b/templates/modules/inventory/schedule_form.html
@@ -46,7 +46,8 @@
                     <ul>
                     {% for item in component_tree_list %}
                         <li>
-                            <a href="#">{{ item.0 }}: {{ item.0.number_needed }}單位<br>單位重量: {{item.0.weight}}g</a>
+                            <a href="#">{{ item.0 }}: {{ item.0.number_needed }}單位<br>
+                            單位重量: {{item.0.weight}}g<br>原物料： {{ item.0.required_material }}</a>
                         </li>
                     {% endfor %}
                     </ul>
