--- a/templates/modules/inventory/component_update.html
+++ b/templates/modules/inventory/component_update.html
@@ -5,7 +5,7 @@
 <br>
 <form method="post" class="ui form">{% csrf_token %}
     <div class="inline fields">
-        <div class="six wide field">
+        <div class="three wide field">
             {{ form.as_p }}
         </div>
     </div>
