--- a/templates/modules/index/index.html
+++ b/templates/modules/index/index.html
@@ -1,4 +1,9 @@
 {% extends 'base/layout.html' %}
 {% block main %}
-    <h2>歡迎來到雨傘王產銷資訊系統。</h2>
+    <div id="cover">
+        <h1 id="h1-index">歡迎來到雨傘王產銷資訊系統。</h1>
+        <br><br>
+        {% load static %}
+        <img src="{% static 'images/umbrella.png' %}" id="index">
+    </div>
 {% endblock %}
