--- a/templates/modules/index/index.html
+++ b/templates/modules/index/index.html
@@ -1,9 +1,9 @@
 {% extends 'base/layout.html' %}
 {% block main %}
     <div id="cover">
-        <h1 id="h1-index">歡迎來到雨傘王產銷資訊系統。</h1>
-        <br><br>
+        {% comment %} <h1 id="h1-index">歡迎來到雨傘王產銷資訊系統。</h1>{% endcomment %}
+        <br><br> 
         {% load static %}
-        <img src="{% static 'images/umbrella.png' %}" id="index">
+        <img src="{% static 'images/umbrella2.png' %}" id="index">
     </div>
 {% endblock %}
